pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constOuter2.pkl
class Person {
  name: String
  const fancyName = new { title = "\(outer.name), Esq." }
}

person = new Person { name = "Foo" }
